--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap');
-*{font-family: 'Poppins', sans-serif;}
 $main-blue: #009FCE;
 $font-blue: #35C5F0;
 $main-gray: #424242;
 $main-black: #2F3438;
-$main-red:#FF7777;
+$main-red: #FF7777;
 $serve-gray: #9e9e9e;
 $main-yellow: #FFEE95;
+$light-gray: #EAEDEF;
