ADD :: header 전반적 수정 (#3)

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,33 +2,52 @@
 @import url("https://assets.ohou.se/design-system/533af259c5abd454.css");
 
 @font-face {
-    font-family: OhouseIcon;
-    src: url(https://assets.ohou.se/design-system/3182812a24650b07.eot);
-    src: url(https://assets.ohou.se/design-system/3182812a24650b07.eot#iefix) format("embedded-opentype"), url(https://assets.ohou.se/design-system/b4b6e9524b50e820.woff2) format("woff2"), url(https://assets.ohou.se/design-system/97e01aa8cb9dfb31.woff) format("woff"), url(https://assets.ohou.se/design-system/0e8120c55fb326c3.ttf) format("truetype"), url(https://assets.ohou.se/design-system/5c4782676e6f5e8f.svg#OhouseIcon) format("svg");
+  font-family: OhouseIcon;
+  src: url(https://assets.ohou.se/design-system/3182812a24650b07.eot);
+  src: url(https://assets.ohou.se/design-system/3182812a24650b07.eot#iefix) format("embedded-opentype"), url(https://assets.ohou.se/design-system/b4b6e9524b50e820.woff2) format("woff2"), url(https://assets.ohou.se/design-system/97e01aa8cb9dfb31.woff) format("woff"), url(https://assets.ohou.se/design-system/0e8120c55fb326c3.ttf) format("truetype"), url(https://assets.ohou.se/design-system/5c4782676e6f5e8f.svg#OhouseIcon) format("svg");
 }
 
 @font-face {
-    font-family: OhouseSans;
-    font-weight: 700;
-    src: url(https://assets.ohou.se/design-system/b3f31cd4248f404e.woff2) format("woff2"), url(https://assets.ohou.se/design-system/0f909ac06f35e6b3.otf#iefix) format("opentype"), url(https://assets.ohou.se/design-system/858f79a098e9eabb.woff) format("woff"), url(https://assets.ohou.se/design-system/0f909ac06f35e6b3.otf) format("opentype"), url(https://assets.ohou.se/design-system/5bc99f879812c352.ttf) format("truetype");
+  font-family: OhouseSans;
+  font-weight: 700;
+  src: url(https://assets.ohou.se/design-system/b3f31cd4248f404e.woff2) format("woff2"), url(https://assets.ohou.se/design-system/0f909ac06f35e6b3.otf#iefix) format("opentype"), url(https://assets.ohou.se/design-system/858f79a098e9eabb.woff) format("woff"), url(https://assets.ohou.se/design-system/0f909ac06f35e6b3.otf) format("opentype"), url(https://assets.ohou.se/design-system/5bc99f879812c352.ttf) format("truetype");
 }
 
 @font-face {
-    font-family: OhouseSans;
-    font-weight: 500;
-    src: url(https://assets.ohou.se/design-system/c168d3c43da800c2.woff2) format("woff2"), url(https://assets.ohou.se/design-system/1a838f271a125273.otf#iefix) format("opentype"), url(https://assets.ohou.se/design-system/5f4bd9b03223c556.woff) format("woff"), url(https://assets.ohou.se/design-system/1a838f271a125273.otf) format("opentype"), url(https://assets.ohou.se/design-system/161f1f22a19b05fb.ttf) format("truetype");
+  font-family: OhouseSans;
+  font-weight: 500;
+  src: url(https://assets.ohou.se/design-system/c168d3c43da800c2.woff2) format("woff2"), url(https://assets.ohou.se/design-system/1a838f271a125273.otf#iefix) format("opentype"), url(https://assets.ohou.se/design-system/5f4bd9b03223c556.woff) format("woff"), url(https://assets.ohou.se/design-system/1a838f271a125273.otf) format("opentype"), url(https://assets.ohou.se/design-system/161f1f22a19b05fb.ttf) format("truetype");
 }
 
 @font-face {
-    font-family: OhouseSans;
-    font-weight: 400;
-    src: url(https://assets.ohou.se/design-system/8cc79ae1ff7b3e5a.woff2) format("woff2"), url(https://assets.ohou.se/design-system/ba62a407902a9ffd.otf#iefix) format("opentype"), url(https://assets.ohou.se/design-system/91ea937079bb0cc1.woff) format("woff"), url(https://assets.ohou.se/design-system/ba62a407902a9ffd.otf) format("opentype"), url(https://assets.ohou.se/design-system/4f8e060bee1f0dc4.ttf) format("truetype");
-}
-
-html {
-    font-family: OhouseSans, sans-serif;
+  font-family: OhouseSans;
+  font-weight: 400;
+  src: url(https://assets.ohou.se/design-system/8cc79ae1ff7b3e5a.woff2) format("woff2"), url(https://assets.ohou.se/design-system/ba62a407902a9ffd.otf#iefix) format("opentype"), url(https://assets.ohou.se/design-system/91ea937079bb0cc1.woff) format("woff"), url(https://assets.ohou.se/design-system/ba62a407902a9ffd.otf) format("opentype"), url(https://assets.ohou.se/design-system/4f8e060bee1f0dc4.ttf) format("truetype");
 }
 
 * {
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: OhouseSans, sans-serif;;
+}
+
+body {
+  letter-spacing: -.4px;
+}
+
+a {
+  cursor: pointer;
+  text-decoration: none;
+}
+
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+input {
+  border: none;
+  outline: none;
 }
