--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,55 +1,165 @@
-.header {
+@import "../../styles/common";
+
+header {
+  width: 1256px;
+  min-width: 1256px;
+  height: 80px;
+
+  margin: 0 auto;
+  padding: 10px 60px;
   display: flex;
-  padding: 20px;
-  padding-left: 150px;
+  justify-content: space-between;
   align-items: center;
+
+  border-bottom: 1px solid $light-gray;
+
+  .logo-wrapper {
+    height: 30px;
+    padding-right: 35px;
+
+    .logo {
+      margin: -4px;
+      padding: 4px;
+    }
+  }
+
+  .header-nav {
+    flex: 1 1 0;
+
+    a {
+      display: inline-block;
+      margin: 0 10px;
+      padding: 21px 5px 15px;
+
+      span {
+        display: inline-block;
+        color: $main-black;
+        margin: -4px;
+        padding: 4px;
+        font-weight: 600;
+        font-size: 18px;
+
+        &:hover {
+          color: $font-blue;
+        }
+      }
+    }
+  }
+
+  .header-right {
+    display: flex;
+    width: 650px;
+    justify-content: flex-end;
+    align-items: center;
+    line-height: 0;
+
+    .search {
+      margin-right: 14px;
+      display: inline-flex;
+      flex: 1 1 0;
+      flex-direction: column;
+
+      .search-inner {
+        display: inline-flex;
+        align-items: center;
+        line-height: 0;
+        border: 1px solid #C2C8CC;
+        border-radius: 4px;
+        height: 40px;
+        padding: 0 14px;
+        width: 100%;
+
+        .search-icon {
+          font-family: OhouseIcon;
+          display: inline-block;
+          font-size: 24px;
+          line-height: 1;
+          vertical-align: middle;
+          color: #828C94;
+        }
+
+        input[type="text"] {
+          display: inline-block;
+          border: none;
+          background: none;
+          height: 100%;
+          color: #2F3438;
+          font-size: 16px;
+          line-height: 24px;
+          flex: 1 0 0;
+          padding: 0 6px;
+          vertical-align: middle;
+        }
+      }
+    }
+
+    .header-cart-wrapper {
+      margin: 9px 1px;
+      position: relative;
+      display: inline-block;
+      padding: 6px;
+      color: #2F3438;
+      line-height: 0;
+      outline: none;
+
+      .header-cart-icon {
+        font-family: OhouseIcon;
+        line-height: 1;
+        font-size: 24px;
+      }
+    }
+
+    .header-right-account {
+      display: inline-block;
+      margin: 0 10px 0 8px;
+
+      a {
+        font-size: 14px;
+        line-height: 18px;
+        color: #2F3438;
+        padding: 0 10px;
+        border-left: 1px solid $light-gray;
+
+        &:first-of-type {
+          border: none;
+        }
+      }
+    }
+
+    .header-write-button {
+      display: inline-flex;
+      align-items: center;
+      background-color: $font-blue;
+      font-size: 14px;
+      color: white;
+      line-height: 18px;
+      width: auto;
+      height: 40px;
+      border-radius: 4px;
+      padding: 0 16px;
+      font-weight: 400;
+      text-align: center;
+
+      .text {
+        margin-right: 6px;
+      }
+
+      .down-icon {
+        font-size: 18px;
+        line-height: 1;
+        font-family: OhouseIcon;
+      }
+
+      &:hover {
+        background-color: $main-blue;
+      }
+    }
+  }
 }
 
-.list {
-  display: flex;
-  margin-left: 40px;
-}
-
-#community {
-  font: inherit;
-  font-size: 18px;
-  font-weight: bold;
-  color: #2f3438;
-  background-color: #ffffff;
-  border: none;
-}
-
-#store {
-  font: inherit;
-  font-size: 18px;
-  font-weight: bold;
-  color: #2f3438;
-  background-color: #ffffff;
-  border: none;
-}
-
-#move {
-  font: inherit;
-  font-size: 18px;
-  font-weight: bold;
-  color: #2f3438;
-  background-color: #ffffff;
-  border: none;
-}
-
-.search {
-  position: relative;
-  display: flex;
-  margin-left: 80px;
-  padding-right: 20px;
-  width: 300px;
-  height: 50px;
-}
 
 #searchbar {
   width: 100%;
-  border: 1px solid #bbb;
-  border-radius: 5px;
   padding: 10px;
   font-size: 18px;
 }
@@ -76,6 +186,7 @@
   color: #2f3438;
   padding-left: 20px;
   align-items: center;
+
   span {
     padding: 0px 10px;
   }
