카테고리 2개 완성

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,7 +29,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: OhouseSans, sans-serif;;
+  font-family: OhouseSans, sans-serif;
 }
 
 body {
