--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -6,15 +6,19 @@
         .banner--image {
             width: 100%;
             height: 100%;
+            object-fit: cover;
         }
     }
 }
 .swiper .swiper-pagination {
   }
-  .swiper .swiper-pagination-bullet {
-    width: 6.5px;
-    height: 6.5px;
-    background-color: hsla(0,0%,100%,.7);
-    box-shadow: 0 1px 6px 0 black;
-    margin: 0 3px !important;
-  }
+.swiper .swiper-pagination-bullet {
+  width: 6.5px;
+  height: 6.5px;
+  background-color: hsla(0,0%,100%,.7);
+  box-shadow: 0 1px 6px 0 black;
+  margin: 0 2.5px !important;
+}
+
+
+
