--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -2,6 +2,10 @@
 .nav_body{
     display: flex;
     justify-content: center;
+    width: 100vw;
+    background-color: white;
+    z-index: 4;
+    position: fixed;
 }
 .nav-total-tit{
     width: 1256px;
