#7 UPDATE | Footer 오류 수정

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -108,6 +108,7 @@ footer{
                     bottom: 10px;
                     left: 10px;
                     span{
+                    height: 10px;
                         font-size: 10px;
                         color: $dark-gray;
                     }
