--- a/src/components/ProductArticle/ProductArticle.scss
+++ b/src/components/ProductArticle/ProductArticle.scss
@@ -1,87 +1,112 @@
 @import '../../styles/common.scss';
-.productarticle-section{
-    margin-top: 50px;
-    
-    .article-tit{
-        .oneproduct{
-            .oneproduct-in{
-                article{
-                    .productarticle-img{
-                        div{
-                            img{
-                                width: 218px;
 
-                            }
+.oneproduct {
+    flex-wrap: wrap;
+    display: inline-block;
+
+    .oneproduct-in {
+        article {
+            position: relative;
+            height: 235px;
+            display: inline-block;
+
+            .productarticle-img {
+                div {
+                    position: relative;
+                    background-color: #f5f5f5;
+                    padding-bottom: 1%;
+                    border-radius: 4px;
+                    overflow: hidden;
+
+                    img {
+                        width: 218px;
+
+                        &:hover {
+                            transform: scale(1.1);
                         }
+
+                        transition: all 0.2s ease-in-out 0s;
+
                     }
-                    .productaritcle-info{
-                        margin-top: 9px;
-                        padding: 0 10px;
-                        .productarticle-info-h1{
-                            margin: 9px 0 0;
-                            .info-h1-company{
-                                display: block;
-                                color: $dark-gray;
-                                font-size: 11px;
-                            }   
-                            .info-h1-name{
-                                max-height: 34px;
-                                margin-top: 5px;
-                                word-break: break-all;
-                                font-size: 13px;
-                                font-weight: 400;
-                                line-height: 17px;
-                                color: #000;
-                                transition: opacity .1s;
-                                overflow: hidden;
-                                text-overflow: ellipsis;
-                                display: -webkit-box;
-                                -webkit-line-clamp: 2;
-                                -webkit-box-orient: vertical;
-                                word-wrap: break-word;
-                            }    
+                }
+            }
+
+            .productaritcle-info {
+                margin-top: 9px;
+                padding: 0 10px;
+
+                .productarticle-info-h1 {
+                    margin: 9px 0 0;
+
+                    .info-h1-company {
+                        display: block;
+                        color: $dark-gray;
+                        font-size: 11px;
+                    }
+
+                    .info-h1-name {
+                        max-height: 34px;
+                        margin-top: 5px;
+                        word-break: break-all;
+                        font-size: 13px;
+                        font-weight: 400;
+                        line-height: 17px;
+                        color: #000;
+                        transition: opacity .1s;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 2;
+                        -webkit-box-orient: vertical;
+                        word-wrap: break-word;
+                    }
+                }
+
+                .productarticle-price {
+                    margin: 2px 0 0;
+                    font-size: 17px;
+                    line-height: 23px;
+                    font-weight: 700;
+
+                    .info-price-degree {
+                        margin-right: 4px;
+                        color: $font-blue;
+                    }
+
+                    .info-price-price {
+                        color: #000;
+                        margin-right: 4px;
+                    }
+                }
+
+                .productarticle-review {
+
+                    p {
+                        font-size: 12px;
+
+                        svg {
+                            color: $font-blue;
+                            width: 1.1em;
+                            height: 1.1em;
+                            margin-right: 1px;
+                            vertical-align: -2px;
+                            margin-right: 1px;
                         }
-                        .productarticle-price{
-                            margin: 2px 0 0;
-                            font-size: 17px;
-                            line-height: 23px;
+
+                        .avg {
+                            margin-right: 2px;
+                            color: $main-gray;
                             font-weight: 700;
-                            .info-price-degree{
-                                margin-right: 4px;
-                                color: $font-blue;
-                            }
-                            .info-price-price{
-                                color: #000;
-                                margin-right: 4px;
-                            }
                         }
-                        .productarticle-review{
-                            
-                            p{
-                                font-size: 12px;
-                                svg{
-                                    color:$font-blue;
-                                    width: 1.1em;
-                                    height: 1.1em;
-                                    margin-right: 1px;
-                                    vertical-align: -2px;
-                                    margin-right: 1px;
-                                }
-                                .avg{
-                                    margin-right: 2px;
-                                    color: $main-gray;
-                                    font-weight: 700;
-                                }
-                                .review-num{
-                                    margin-right: 2px;
-                                    color: $serve-gray;
-                                    font-weight: 700;
-                                }
-                            }
+
+                        .review-num {
+                            margin-right: 2px;
+                            color: $serve-gray;
+                            font-weight: 700;
                         }
                     }
                 }
             }
-        }   
+        }
     }
 }
