UPDATE :: 오늘의 딜 완

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,8 +2,8 @@
 .footer-isle{
     background-color: #F7F9FA;
     width: 100%;
-    position: absolute;
-    bottom: 0 auto;
+    position: relative;
+    bottom: 0;
 }
 footer{
     width: 100vw;
