--- a/src/components/ProductArticle/ProductArticle.scss
+++ b/src/components/ProductArticle/ProductArticle.scss
@@ -10,23 +10,44 @@
             height: 235px;
             display: inline-block;
 
+            width: 265px;
             .productarticle-img {
-                div {
-                    position: relative;
-                    background-color: #f5f5f5;
-                    padding-bottom: 1%;
-                    border-radius: 4px;
-                    overflow: hidden;
+                position: relative;
+                background-color: #f5f5f5;
+                padding-bottom: 100%;
+                border-radius: 4px;
+                overflow: hidden;
+                .productarticle-img-day{
+                    position: absolute;
+                    z-index: 3;
+                    top: 12px;
+                    left: 12px;
+                    span{
+                        padding: 3px 7px;
+                        background-color: #f77;
+                        color: white;    
+                        font-size: 13px;
+                        line-height: 15px;
+                        font-weight: 700;
+                        border-radius: 4px;
+                        text-align: center;
+                    }
+                }
+                .productarticle-img-img{
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    box-sizing: border-box;
+                    z-index: 1;
+                    pointer-events: none;
 
                     img {
-                        width: 218px;
-
-                        &:hover {
-                            transform: scale(1.1);
+                        position: absolute;
+                        width: 100%;
+                        &:hover{
+                            cursor: pointer;
                         }
-
-                        transition: all 0.2s ease-in-out 0s;
-
+                        transition: transform .2s;
                     }
                 }
             }
