ADD :: 인기상품 추가

--- a/src/components/ProductArticle/ProductArticle.scss
+++ b/src/components/ProductArticle/ProductArticle.scss
@@ -135,7 +135,7 @@
                 transition: transform .2s;
             }
             .info-h1-name{
-                color: gray;
+                color: $serve-gray;
             }
         }
     }
