UPDATE :: 메인화면 article 완성

--- a/src/components/ProductArticle/ProductArticle.scss
+++ b/src/components/ProductArticle/ProductArticle.scss
@@ -66,6 +66,7 @@
                     }
 
                     .info-h1-name {
+                        color: #000;
                         max-height: 34px;
                         margin-top: 5px;
                         word-break: break-all;
@@ -120,7 +121,7 @@
                         }
 
                         .review-num {
-                            margin-right: 2px;
+                            margin-left: 2px;
                             color: $serve-gray;
                             font-weight: 700;
                         }
