--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -5,7 +5,7 @@
     width: 100vw;
         .banner--image {
             width: 100%;
-            height: 100%;
+            height: 380px;
             object-fit: cover;
         }
     }
