--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -20,17 +20,20 @@
             .Nav_front_nav{
                 a{
                     div{  
+                        .storehome{
+                            color:$font-blue;
+                        }
                         float: left;
                         padding: 4px;
                         li{
                             margin: 0 5px;
                         
                             list-style: none;
-                            font-size: 15px;
+                            font-size: 16px;
                             line-height: 20px;
                             position: relative;
-                            font-weight: 540;
-                            font-family: 'Poppins', sans-serif;
+                            font-weight: 500;
+                           
                         
                           &:hover{
                                 color: $font-blue;
