--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -130,13 +130,14 @@
 
                             .product-list-cate {
                                 display: none;
-                                z-index: 10;
+                                z-index: 3;
                                 width: 198px;
                                 position: absolute;
                                 top: 1410px;
                                 left: 1140px;
-                                border-radius: 40px;
-                                box-shadow: 0 1px 19px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+                                border-radius: 10px;
+                                box-shadow: 0 -1px 16px rgba(0, 0, 0, 0.2);
+
 
                                 ul {
                                     .cate-ingisoon {
