--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,24 +1,37 @@
 @import '../../styles/common.scss';
-.banner_tit{
-    .banner-swiper{
-        
+
+.banner_tit {
+  .banner-swiper {
     width: 100vw;
-        .banner--image {
-            width: 100%;
-            height: 380px;
-            object-fit: cover;
+
+    .banner {
+      .swiper-pagination-bullets {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        bottom: 15px;
+
+        .swiper-pagination-bullet {
+          width: 6px;
+          height: 6px;
+          background-color: hsla(0, 0%, 100%, .7);
+          box-shadow: 0 1px 6px 0 black;
+          margin: 0 2.5px !important;
         }
+
+        .swiper-pagination-bullet-active {
+          width: 8px;
+          height: 8px;
+          box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.12);
+          background-color: hsla(0, 0%, 100%, .7);
+        }
+      }
+
+      .banner--image {
+        width: 100%;
+        height: 380px;
+        object-fit: cover;
+      }
     }
-}
-.swiper .swiper-pagination {
   }
-.swiper .swiper-pagination-bullet {
-  width: 6.5px;
-  height: 6.5px;
-  background-color: hsla(0,0%,100%,.7);
-  box-shadow: 0 1px 6px 0 black;
-  margin: 0 2.5px !important;
 }
-
-
-
