--- a/src/components/Signup_main/Signup_main.scss
+++ b/src/components/Signup_main/Signup_main.scss
@@ -157,4 +157,14 @@
   margin-bottom: 50px;
   font-size: 15px;
   text-align: center;
+
+  a {
+    text-decoration: underline;
+    color: #424242;
+    font-weight: 600;
+
+    &:hover {
+      opacity: 0.7;
+    }
+  }
 }
