--- a/src/pages/ProductDetail/ProductDetailPage.scss
+++ b/src/pages/ProductDetail/ProductDetailPage.scss
@@ -140,7 +140,7 @@
                 .hr-detail {
                     position: relative;
                     bottom: 30px;
-                    color: #a2aaaf;
+                    background-color: $light-gray;
                     width: 480px;
                 }
 
@@ -168,6 +168,20 @@
                             line-height: 19px;
                             font-weight: bold;
                             padding-bottom: 1px;
+                        }
+                    }
+                }
+                .product-select{
+                    position: relative;
+                    top: 20px;
+                    select{
+                        border-color: $font-blue;
+                        border-radius: 3px;
+                        width: 100%;
+                        height: 40px;
+                        font-size: 15px;
+                        option{
+
                         }
                     }
                 }
